[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sycamore"
version = "0.5.0"
description = "Local-first CLI for capability calibration and recovery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-frontmatter",
    "rich",
    "typer",
]

[project.scripts]
syca = "sycamore.cli.app:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
